--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -6,38 +6,26 @@ html
     link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    .navbar.navbar-default.navbar-fixed-top
+   .navbar.navbar-default.navbar-fixed-top
       .container
-        .navbar-header 
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-            span.sr-only Toggle navigation
+        .navbar-header
+          a.navbar-brand(href='/') Loc8r
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='/') Locator App
-        #navbar.navbar-collapse.collapse
+        #navbar-main.navbar-collapse.collapse
           ul.nav.navbar-nav
             li
-              a(href='/') Home
-
-            li
-              a(href='about') About 
-            li
-              a(href='signin') Sign In
-            li.active
-              a(href='register') Register
-              
+              a(href='/about/') About
 
     .container
-        block content        
-        footer 
-          .row 
-            .col-lg-12
-              p &copy; Locator App 2023
-    script(src='/javascripts/jquery-1.11.1.min.js')
-    script(src='/bootstrap/js/bootstrap.min.js')
-            footer
+      block content
+
+      footer
+        .row
+          .col-xs-12
+            small &copy; Muskaan Marwa 2023
 
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
